--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mp3gain (1.5.1-2~ppa1~jaunty1) jaunty; urgency=low
+
+  * Backport from lucid to jaunty without changes
+
+ -- dodamn <dodamn@gmail.com>  Thu, 24 Dec 2009 04:14:53 +0900
+
 mp3gain (1.5.1-2) unstable; urgency=low
 
   * Add new options in 1.5.x and some clarifications to the man page. Thanks
