--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+mp3gain (1.5.1-2~ppa3~karmic1) karmic; urgency=low
+
+  * Remove trailing spaces when converting ID3v1 tags to ID3v2.4.
+    - Thanks to Alexander Zangerl <az@debian.org> for the patch.
+    - Closes: #564308
+
+ -- dodamn <dodamn@gmail.com>  Fri, 29 Jan 2010 22:25:53 +0900
+
 mp3gain (1.5.1-2~ppa2~karmic1) karmic; urgency=low
 
   * Detach hard-coded 'foobar2000 style replaygain tag' feature to a patch
